Closed Bug 490635 Opened 17 years ago Closed 17 years ago

Download manager: pause button disabled

Categories

(Camino Graveyard :: Downloading, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
Camino2.0

People

(Reporter: phiw2, Assigned: ishermandom+bugs)

References

Details

(Keywords: regression)

Attachments

(3 files, 2 obsolete files)

Attached image screenshot
What the summary says: the download manager lists 6 downloads, the pause button is disabled. Removing the plist out of my profile restores the functionality. I'm not clear how this happened. I'll monitor the situation over the next few days. Quick checking the plist file in a texteditor and Property List Editor.app doesn't show anything wrong.
The last download in the list (fx 3.5b4-1) is me testing... I cancelled that download.
I saw this yesterday, I think. Not sure what was going on; I didn't think of removing the plist so I may still have the brokenness in my setup. I'll double-check tonight.
I can reproduce this on a fresh profile in 2009-04-22 by doing the following: 1) Download a file 2) Quit 3) Relaunch Camino 4) Start downloading another file 2.0b2 running on that same profile is fine. We last really touched the dlmgr in bug 483532, which in turn was a regression from bug 406103 (cl had some l10n fixes, but my guess is this wouldn't be them). My guess is this is another regression from bug 406103, but I don't have the builds handy atm. We need to fix this for 2.0.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Target Milestone: --- → Camino2.0
This broke between 3-24 and 3-25, which actually points at bug 483532 :P (There are other checkins in this range, http://tinyurl.com/cvldk6, but only bug 483532 seems likely.)
Attached patch Fix (obsolete) — Splinter Review
Thanks to all, esp. Smokey, for helping to track this down :)
Assignee: nobody → ishermandom+bugs
Status: NEW → ASSIGNED
Attachment #375131 - Flags: review?(nick.kreeger)
Comment on attachment 375131 [details] [diff] [review] Fix + return [[self window] isKeyWindow]; + } else { + [theItem setImage:[NSImage imageNamed:@"dl_pause"]]; + [theItem setLabel:NSLocalizedString(@"dlPauseButtonLabel", nil)]; NIT: Note that the current Camino style guide defines that the else should be on a new line.
Attachment #375131 - Flags: review?(nick.kreeger) → review+
Attached patch Fix, nit addressed (obsolete) — Splinter Review
Attachment #375131 - Attachment is obsolete: true
Attachment #375134 - Flags: superreview?(stuart.morgan+bugzilla)
Attachment #375134 - Flags: review+
I am *so* bad at hand-editing patch files. Should actually be possible to apply this patch now.
Attachment #375134 - Attachment is obsolete: true
Attachment #375141 - Flags: superreview?(stuart.morgan+bugzilla)
Attachment #375141 - Flags: review+
Attachment #375134 - Flags: superreview?(stuart.morgan+bugzilla)
Comment on attachment 375141 [details] [diff] [review] Fix, proper patch sr=smorgan
Attachment #375141 - Flags: superreview?(stuart.morgan+bugzilla) → superreview+
Landed on cvs trunk; nice work!
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Verified using the STR in comment 3, with a new profile and with my default profile. I also tested with the plist attached. Version 2.0b3pre (1.9.0.11pre 2009050114) Thanks.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: