Bug 490635 - Pause button in the Downloads window never gets enabled.  Patch by Ilya Sherman <ishermandom+bugs@gmail.com>, r=kreeger, sr=smorgan